--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
 # Copy to .env and fill in
-FEISHU_APP_ID=cli_a823ed89dd3d1013
-FEISHU_APP_SECRET=WNo78z4fjOcEZilR1DYEihYC8HCRJlXp
+#FEISHU_APP_ID=cli_a823ed89dd3d1013
+#FEISHU_APP_SECRET=WNo78z4fjOcEZilR1DYEihYC8HCRJlXp
+FEISHU_APP_ID=cli_a82467802930100d
+FEISHU_APP_SECRET=qFtT8NN6h6Y2QomjtdP2sbYb4heoP5Yp
 
 # Optional:
 # FEISHU_DEBUG_OPEN_ID=ou_xxx   # for testing, force-send all messages to this open_id
