--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-flask==3.0.3
-requests==2.32.3
-Pillow==10.4.0
-qrcode==7.4.2
+flask==3.1.2
+requests==2.32.5
+Pillow==11.3.0
+qrcode==8.2
+python-dotenv==1.0.1
